--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<td rowspan="2">
 			<img src="images/mainmenu_04.jpg" width="94" height="36" alt=""></td>
 		<td rowspan="2">
-                        <a herf="https://murse21.github.io/psdis3115//blob/main/submenu/community.html">
+                        <a herf="https://murse21.github.io/psdis3115//submenu%20community/community.html">
 				<  img   src = "images/mainmenu_05.jpg"   너비 = "94"   높이 = "36"   울타리 = "0"  alt = ""  ></  a  >  </  >
 		<td colspan="2">
 			<img src="images/mainmenu_06.jpg" width="88" height="1" alt=""></td>
